# CS521_MP4

./: CMakeLists.txt  README.md  dual_bench.cpp  dual_number.h  dual_test.cpp  p2_jax.py  p2_jax_compare.py  p2_jax_jit.py  p2_jax_lower_to_hlo.py  p2_jax_vmap.py  timings.csv
pruning/: prune_resnet18_cifar10.py
quantization/: quantize_resnet18_cifar10.py
quantization_jax/: aqt_resnet18_cifar10.py
